# android-autorelab

./: .gitignore  ARCHIVE_NOTES.md  Deep research  README.md  The_Agency_The_Legion_workflows_AI_RE_Android_BL.md  pyproject.toml
config/: exploit_references.yaml  models.yaml  policies.yaml  tools.yaml
config/targets/: motorola_g_power.yaml  pixel_7.yaml  samsung_a54.yaml
config/workflows/: agency.yaml  legion.yaml
docs/: boot-chain-research.md  target-intake.md
ghidra_scripts/: ExportFacts.java
proof-runs/agency/: report.json  report.md  run.json
proof-runs/default/: report.json  report.md  run.json
proof-runs/legion/: report.json  report.md  run.json
scripts/: avbtool.py  install.sh  install_services.sh  install_workflow_services.sh  intake_target.py  lpunpack.py  map_bootchain.py  run_router.py  score_targets.py  start_agency.sh  start_legion.sh  stop_agency.sh  stop_legion.sh  unpack_bootimg.py  venv_paths.sh  verify.sh  verify_agency.sh  verify_legion.sh  verify_shared.sh  workflow_router.py  workflow_service.py  workflow_verify.py
services/: agency.service  legion.service
src/android_autorelab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/arelab/: __init__.py  agents.py  analyze.py  basement.py  bootchain.py  cfg.py  cli.py  config.py  (+23 more)
templates/: base.html  intake.html  run_detail.html  runs.html  workflow_choice.html
tests/: test_agents.py  test_locks.py  test_manifest.py  test_model_gateway.py  test_run_router.py  test_scaffold.py  test_schema.py  test_startup_flow.py  test_tools.py  test_workflows.py
(+1 files in other folders)
